change "step" for "steps"

--- a/conf/test.config
+++ b/conf/test.config
@@ -29,7 +29,7 @@ params {
     phased = true
 
     // Pipeline steps
-    step   = "panelprep,impute"
+    steps   = "panelprep,impute"
 
     // Impute tools
     tools  = "glimpse1"
