--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -31,7 +31,7 @@ params {
     map    = "${projectDir}/tests/csv/map.csv"
 
     // Pipeline steps
-    step   = "all"
+    steps   = "all"
 
     // Impute tools
     tools  = "glimpse1,glimpse2,stitch,quilt"
