--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -28,7 +28,7 @@ params {
     panel                  = "${projectDir}/tests/csv/panel_full.csv"
 
     // Pipeline steps
-    step                   = "all"
+    steps                   = "all"
 
     // Panelprep optional args
     remove_samples        = "NA12878,NA12891,NA12892"
