--- a/conf/test_sim.config
+++ b/conf/test_sim.config
@@ -28,5 +28,5 @@ params {
     fasta  = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
 
     // Pipeline steps
-    step   = "simulate"
+    steps   = "simulate"
 }
