--- a/conf/test_stitch.config
+++ b/conf/test_stitch.config
@@ -28,7 +28,7 @@ params {
     posfile = "${projectDir}/tests/csv/posfile.csv"
 
     // Pipeline steps
-    step   = "impute"
+    steps   = "impute"
 
     // Impute tools
     tools  = "stitch"
