--- a/conf/test_validate.config
+++ b/conf/test_validate.config
@@ -31,5 +31,5 @@ params {
     map    = "${projectDir}/tests/csv/map.csv"
 
     // Pipeline steps
-    step   = "validate"
+    steps   = "validate"
 }
