--- a/nextflow.config
+++ b/nextflow.config
@@ -9,8 +9,8 @@
 // Global default params, used in configs
 params {
 
-    // step
-    step                        = null
+    // steps
+    steps                        = null
 
     // Input options
     input                       = null
