--- a/conf/test_glimpse2.config
+++ b/conf/test_glimpse2.config
@@ -28,7 +28,7 @@ params {
     phased = true
 
     // Pipeline steps
-    step   = "panelprep,impute"
+    steps   = "panelprep,impute"
 
     // Impute tools
     tools  = "glimpse2"
