--- a/conf/test_panelprep.config
+++ b/conf/test_panelprep.config
@@ -12,7 +12,7 @@
 
 params {
     config_profile_name        = 'Test profile'
-    config_profile_description = 'Minimal test dataset to check panel prepation step'
+    config_profile_description = 'Minimal test dataset to check panel prepation steps'
 
     // Limit resources so that this can run on GitHub Actions
     max_cpus   = 2
@@ -25,5 +25,5 @@ params {
     phased = true
 
     // Pipeline steps
-    step   = "panelprep"
+    steps   = "panelprep"
 }
