Remove intermediary files from output

--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -42,11 +42,7 @@ process {
 
     // Impute with GLIMPSE1
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:.*' {
-        publishDir = [
-            path  : { "${params.outdir}/imputation/glimpse1/" },
-            mode  : params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
+        publishDir = [ enabled: false ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_CHUNK' {
@@ -71,10 +67,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:BCFTOOLS_INDEX_2' {
-        publishDir = [
-            path: { "${params.outdir}/imputation/glimpse1" },
-            mode: params.publish_dir_mode,
-        ]
+        publishDir = [ enabled: false ]
     }
 
     // Concatenate the imputed chunks
