Set validation by whole samples

--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -76,7 +76,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:ADD_COLUMNS' {
-        ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_C${meta.chr}_SNP" }
+        ext.prefix = { "${meta.id}_P${meta.panel}_SNP" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GAWK' {
