Change chromosomes usage

--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -28,12 +28,12 @@ process {
             "-Aim",
             "-C alleles"
         ].join(' ')
-        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.call" }
+        ext.prefix = { "${meta.id}.call" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_ANNOTATE' {
         ext.args   = "--set-id '%CHROM:%POS:%REF:%ALT' -Oz"
-        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.annotate" }
+        ext.prefix = { "${meta.id}.annotate" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_INDEX' {
