--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -17,6 +17,7 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:.*' {
         publishDir = [ enabled: false ]
     }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_MPILEUP' {
         ext.args = [
             "-I",
@@ -27,32 +28,15 @@ process {
             "-Aim",
             "-C alleles"
         ].join(' ')
-        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}_truth.call" }
+        ext.prefix = { "${meta.id}_truth.call" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_ANNOTATE' {
         ext.args   = ["--set-id '%CHROM:%POS:%REF:%ALT'", "-Oz"].join(' ')
-        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.annotate" }
+        ext.prefix = { "${meta.id}.annotate" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_INDEX' {
-        ext.args = "--tbi"
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:.*' {
-        ext.prefix = { "${meta.id}_truth_concat" }
-        publishDir = [
-            path: { "${params.outdir}/validation/concat" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:BCFTOOLS_CONCAT' {
-        ext.args = ["--ligate", "--output-type z",].join(' ')
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:BCFTOOLS_INDEX' {
         ext.args = "--tbi"
     }
 
