--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -21,7 +21,7 @@ process {
 
     // Impute quilt
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:QUILT_QUILT' {
-        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.impute" }
+        ext.prefix = { "${meta.id}_C${meta.chr}.impute" }
         publishDir = [enabled: false]
     }
 
@@ -33,7 +33,7 @@ process {
     // Annotate quilt imputed VCFs
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:BCFTOOLS_ANNOTATE' {
         ext.args     = "--set-id '%CHROM:%POS:%REF:%ALT' -Oz"
-        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.impute.annotate" }
+        ext.prefix = { "${meta.id}_C${meta.chr}.impute.annotate" }
         publishDir = [ enabled: false ]
     }
 
