Fix panel meta name in VCFLIB

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -72,7 +72,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:VCFLIB_VCFFIXUP' {
-        ext.prefix   = { "${meta.panel}_${meta.chr}" }
+        ext.prefix   = { "${meta.id}_${meta.chr}" }
         publishDir   = [enabled: false]
     }
 
