--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -13,12 +13,17 @@
 process {
     // Configuration for the glimpse1 imputation subworkflow
 
-    // Call the variants before imputation
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:.*' {
+    // Impute with GLIMPSE1
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:.*' {
         publishDir = [ enabled: false ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_MPILEUP' {
+    // Call the variants before imputation
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:BAM_GL_BCFTOOLS:.*' {
+        publishDir = [ enabled: false ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:BAM_GL_BCFTOOLS:BCFTOOLS_MPILEUP' {
         ext.args = [
             "-I",
             "-E",
@@ -31,29 +36,19 @@ process {
         ext.prefix = { "${meta.id}.call" }
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_ANNOTATE' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:BAM_GL_BCFTOOLS:BCFTOOLS_ANNOTATE' {
         ext.args   = "--set-id '%CHROM:%POS:%REF:%ALT' -Oz"
         ext.prefix = { "${meta.id}.annotate" }
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_INDEX' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:BAM_GL_BCFTOOLS:BCFTOOLS_INDEX' {
         ext.args = "--tbi"
     }
 
-    // Impute with GLIMPSE1
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:.*' {
-        publishDir = [ enabled: false ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_CHUNK' {
-        ext.args = ["--window-size 200000", "--buffer-size 20000"].join(' ')
-        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.chunk" }
-        publishDir = [ enabled: false ]
-    }
-
+    // Impute the variants
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_PHASE' {
         ext.args   = ["--impute-reference-only-variants"].join(' ')
-        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.phase" }
+        ext.prefix = { "${meta.id}_${meta.region.replace(':','_')}.phase" }
         ext.suffix = "bcf"
         publishDir = [ enabled: false ]
     }
@@ -63,7 +58,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_LIGATE' {
-        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.ligate" }
+        ext.prefix = { "${meta.id}_${meta.chr}.ligate" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:BCFTOOLS_INDEX_2' {
