Fix panel id prefix

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -176,7 +176,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE_CHUNK' {
-        ext.prefix    = { "${meta.panel}_${meta.chr}_chunks_glimpse1" }
+        ext.prefix = { "${meta.id}_${meta.chr}_chunks_glimpse1" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/glimpse1/" },
             mode: params.publish_dir_mode,
@@ -185,8 +185,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE2_CHUNK' {
-        ext.args = ["--window-mb 2.0"].join(' ')
-        ext.prefix    = { "${meta.panel}_${meta.chr}_chunks_glimpse2" }
+        ext.prefix    = { "${meta.id}_${meta.chr}_chunks_glimpse2" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/glimpse2/" },
             mode: params.publish_dir_mode,
@@ -195,7 +194,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE2_SPLITREFERENCE' {
-        ext.prefix    = { "${meta.panel}_${meta.chr}_chunks_glimpse2" }
+        ext.prefix    = { "${meta.id}_${meta.chr}_chunks_glimpse2" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/glimpse2/" },
             mode: params.publish_dir_mode,
