Fix glimpse 1 and 2 and simplify channel concatenation

--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -48,12 +48,13 @@ process {
     // Impute the variants
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_PHASE' {
         ext.args   = ["--impute-reference-only-variants"].join(' ')
-        ext.prefix = { "${meta.id}_${meta.region.replace(':','_')}.phase" }
+        ext.prefix = { "${meta.id}_${meta.region.replace(':','_')}_phase" }
         ext.suffix = "bcf"
         publishDir = [ enabled: false ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:BCFTOOLS_INDEX_2' {
+        ext.args   = "--tbi"
         publishDir = [ enabled: false ]
     }
 
@@ -62,6 +63,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:BCFTOOLS_INDEX_2' {
+        ext.args   = "--tbi"
         publishDir = [ enabled: false ]
     }
 
