--- a/conf/steps/imputation_glimpse2.config
+++ b/conf/steps/imputation_glimpse2.config
@@ -20,6 +20,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE2:GLIMPSE2_PHASE' {
+        ext.prefix   = { "${meta.id}_${meta.region.replace(':','_')}_glimpse2" }
         ext.args     = "--keep-monomorphic-ref-sites"
         ext.suffix   = "vcf.gz"
         publishDir   = [ enabled: false ]
@@ -28,6 +29,15 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE2:BCFTOOLS_INDEX_1' {
         ext.args     = "--tbi"
         publishDir   = [ enabled: false ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE2:GLIMPSE2_LIGATE' {
+        ext.prefix = { "${meta.id}_${meta.chr}.ligate" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE2:BCFTOOLS_INDEX_2' {
+        ext.args     = "--tbi"
+        publishDir = [ enabled: false ]
     }
 
     // Concatenate the imputed chunks
