--- a/conf/test.config
+++ b/conf/test.config
@@ -34,3 +34,7 @@ params {
     // Impute tools
     tools  = "glimpse1"
 }
+
+withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE_CHUNK' {
+    ext.args   = ["--window-size 10000", "--window-count 400", "--buffer-size 5000", "--buffer-count 30"].join(' ')
+}
