--- a/conf/test_glimpse2.config
+++ b/conf/test_glimpse2.config
@@ -33,3 +33,7 @@ params {
     // Impute tools
     tools  = "glimpse2"
 }
+
+withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE_CHUNK' {
+    ext.args   = ["--window-size 10000", "--window-count 400", "--buffer-size 5000", "--buffer-count 30"].join(' ')
+}
