--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -127,6 +127,12 @@ process {
         publishDir = [ enabled: false ]
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:GAWK' {
+        ext.args   = "'{ gsub(\",\", \"\\t\") ; key = \$1 FS \$2 } !seen[key]++'" // Remove duplicates
+        ext.prefix = { "${meta.id}_${meta.chr}_posfile_stitch" }
+        ext.suffix = "txt"
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:TABIX_BGZIP' {
         ext.prefix = { "${meta.id}_${meta.chr}_glimpse1_sites_tsv" }
         publishDir = [
@@ -142,7 +148,7 @@ process {
             "-b2",
             "-e2"
         ].join(' ')
-        ext.prefix = { "${meta.id}_${meta.chr}_glimpse1_sites_tsv" }
+        ext.prefix = { "${meta.id}_${meta.chr}_glimpse1_sites_tsv_gz" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/sites/tsv/" },
             mode: params.publish_dir_mode,
