Fix simulation name for concordance

--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -40,7 +40,7 @@ process {
         publishDir = [ enabled: false ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_MERGE' {
-        ext.prefix = { "${meta.id}_${meta.depth}x" }
+        ext.prefix = { "${meta.id}" }
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_INDEX_2' {
         ext.args = ""
