Fix files names for concordance

--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -33,7 +33,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_ANNOTATE' {
         ext.args   = ["--set-id '%CHROM:%POS:%REF:%ALT'", "-Oz"].join(' ')
-        ext.prefix = { "${meta.id}.annotate" }
+        ext.prefix = { "${meta.id}_${meta.chr}.annotate" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_INDEX' {
@@ -69,21 +69,17 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GLIMPSE2_CONCORDANCE' {
         ext.args   = "--out-r2-per-site"
-        ext.prefix = { "${meta.id}.concordance" }
+        ext.prefix = { "${meta.id}_P${meta.panel}_T${meta.tools}.concordance" }
         publishDir = [ enabled: false ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GAWK' {
-        ext.args   = "'(NR == 1) || (FNR > 1)'" // Skip header line
-        ext.suffix = { "txt" }
-    }
-
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GUNZIP' {
+        ext.prefix = { "${meta.id}_P${meta.panel}_T${meta.tools}" }
         publishDir = [ enabled: false ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:ADD_COLUMNS' {
-        ext.prefix = { "${meta.id}_P${meta.panel}_SNP" }
+        ext.prefix = { "${meta.id}_P${meta.panel}_T${meta.tools}_SNP" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GAWK' {
