Add verbosity to ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,4 +52,4 @@ jobs:
 
       - name: Run pipeline with test data
         run: |
-          nf-test test --tag "${{ matrix.TEST_PROFILE }}" --profile docker
+          nf-test test --tag "${{ matrix.TEST_PROFILE }}" --profile docker --verbose
