Separate stitch output by samples

--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -24,6 +24,23 @@ process {
         publishDir = [enabled: false]
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:BCFTOOLS_INDEX' {
+        ext.args   = '--tbi'
+        publishDir = [enabled: false]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:VCF_SAMPLES_BCFTOOLS:.*' {
+        publishDir = [enabled: false]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:VCF_SAMPLES_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
+        ext.args   = "-Oz"
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:VCF_SAMPLES_BCFTOOLS:BCFTOOLS_INDEX' {
+        ext.args   = "--tbi"
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:.*' {
         publishDir = [
             path: { "${params.outdir}/imputation/stitch/concat" },
