--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -29,23 +29,8 @@ process {
         publishDir = [enabled: false]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:VCF_SAMPLES_BCFTOOLS:.*' {
-        publishDir = [enabled: false]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:VCF_SAMPLES_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
-        ext.args   = "-Oz"
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:VCF_SAMPLES_BCFTOOLS:BCFTOOLS_INDEX' {
-        ext.args   = "--tbi"
-    }
-
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:.*' {
-        publishDir = [
-            path: { "${params.outdir}/imputation/stitch/concat" },
-            mode: params.publish_dir_mode,
-        ]
+        publishDir = [enabled:false]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:BCFTOOLS_CONCAT' {
@@ -56,6 +41,21 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:BCFTOOLS_INDEX' {
         ext.args   = "--tbi"
         ext.prefix = { "${meta.id}_stitch" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SAMPLES_BCFTOOLS:.*' {
+        publishDir = [
+            path: { "${params.outdir}/imputation/stitch/concat" },
+            mode: params.publish_dir_mode,
+        ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SAMPLES_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
+        ext.args   = "-Oz"
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SAMPLES_BCFTOOLS:BCFTOOLS_INDEX' {
+        ext.args   = "--tbi"
     }
 
 }
