Fix phase panel

--- a/conf/test_panelprep.config
+++ b/conf/test_panelprep.config
@@ -20,9 +20,10 @@ params {
     max_time   = '1.h'
 
     // Genome references
-    fasta  = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
-    panel  = "${projectDir}/tests/csv/panel.csv"
-    phased = true
+    fasta        = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
+    input_region = "${projectDir}/tests/csv/region.csv"
+    panel        = "${projectDir}/tests/csv/panel.csv"
+    phased       = true
 
     // Pipeline steps
     steps   = "panelprep"
