Remove intermediary files from output results

--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -12,16 +12,11 @@
 
 process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:.*' {
-        publishDir = [
-            path: { "${params.outdir}/imputation/stitch/" },
-            mode: params.publish_dir_mode,
-            enabled: true
-        ]
+        publishDir = [enabled: false]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:BCFTOOLS_INDEX' {
-        ext.args   = '--tbi'
-        publishDir = [enabled: false]
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:STITCH' {
+        ext.prefix = { "${meta.id}_stitch" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:BCFTOOLS_INDEX' {
