--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -27,7 +27,7 @@ params {
     // Genome references
     fasta  = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
     panel  = "${projectDir}/tests/csv/panel.csv"
-    phased = true
+    phased = false
     map    = "${projectDir}/tests/csv/map.csv"
 
     // Pipeline steps
