Create local shapeit5 sbwf

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -90,6 +90,24 @@ process {
         ]
     }
 
+    // Subworkflow: VCF_PHASE_SHAPEIT5
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:.*' {
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/phasing" },
+            mode: params.publish_dir_mode,
+            enabled: false
+        ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:BEDTOOLS_MAKEWINDOWS' {
+        ext.prefix = { "${meta.id}_chunks" }
+        ext.args   = ['-w 30000', '-s 20000'].join(' ')
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:SHAPEIT5_PHASECOMMON' {
+        ext.prefix = { "${meta.id}_${meta.chunk.replace(':',"_")}_chunks" }
+    }
+
     // Subworkflow: VCF_SITES_EXTRACT_BCFTOOLS
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:.*' {
         publishDir = [ enabled: false ]
@@ -154,13 +172,6 @@ process {
             mode: params.publish_dir_mode,
             enabled: true
         ]
-    }
-
-    // (Optional) Subworkflow: Phasing
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_PANEL:VCF_PHASE_SHAPEIT5:BEDTOOLS_MAKEWINDOWS' {
-        ext.args = ['-w 60000', '-s 40000'].join(' ')
-        ext.prefix = { "${meta.id}_chunks" }
-        publishDir = [ enabled: false ]
     }
 
     // Subworkflow: Concat phased panel
