--- a/conf/test_panelprep.config
+++ b/conf/test_panelprep.config
@@ -23,7 +23,7 @@ params {
     fasta        = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
     input_region = "${projectDir}/tests/csv/region.csv"
     panel        = "${projectDir}/tests/csv/panel.csv"
-    phased       = true
+    phased       = false
 
     // Pipeline steps
     steps   = "panelprep"
