--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -21,7 +21,7 @@ params {
 
     // Input data
     input                = "${projectDir}/tests/csv/sample_sim.csv"
-    input_region         = "${projectDir}/tests/csv/region.csv"
+    input_region         = "all"
     depth                = 1
 
     // Genome references
