--- a/conf/test_quilt.config
+++ b/conf/test_quilt.config
@@ -25,11 +25,14 @@ params {
 
     // Genome references
     fasta  = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
-    panel  = "${projectDir}/tests/csv/panel.csv"
     phased = true
 
     // Pipeline steps
-    steps   = "panelprep,impute"
+    steps   = "impute"
+
+    // External params
+    chunks = "${projectDir}/tests/csv/chunks.csv"
+    panel  = "${projectDir}/tests/csv/panel_2.csv"
 
     // Impute tools
     tools  = "quilt"
