new posfile structure for stitch

--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -15,6 +15,18 @@ process {
         publishDir = [enabled: false]
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:POSFILE_PREPARE_GAWK:GUNZIP' {
+        ext.prefix = { "${meta.panel}_${meta.chr}_original_posfile" }
+        publishDir = [enabled: false]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:POSFILE_PREPARE_GAWK:GAWK' {
+        ext.args   = "'{ gsub(\",\", \"\\t\") ; key = \$1 FS \$2 } !seen[key]++'" // Remove duplicates
+        ext.prefix = { "${meta.panel}_${meta.chr}_posfile_stitch" }
+        ext.suffix = "txt"
+        publishDir = [enabled: false]
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:STITCH' {
         ext.prefix = { "${meta.id}_stitch" }
     }
