--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -18,6 +18,7 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:POSFILE_PREPARE_GAWK:GUNZIP' {
         ext.prefix = { "${meta.panel}_${meta.chr}_original_posfile" }
         publishDir = [enabled: false]
+        tag = {"${meta.panel}_${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:POSFILE_PREPARE_GAWK:GAWK' {
