Add freq parameter and fix phasing

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -99,9 +99,9 @@ process {
         ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:BEDTOOLS_MAKEWINDOWS' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:GLIMPSE2_CHUNK' {
         ext.prefix = { "${meta.id}_chunks" }
-        ext.args   = ['-w 30000', '-s 20000'].join(' ')
+        ext.args   = ['--window-count 12250', '--buffer-count 3500'].join(' ')
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:SHAPEIT5_PHASECOMMON' {
