--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,7 @@ params {
     // Panel preparation
     panel                       = null
     phased                      = null
+    freq                        = true
     rename_chr                  = false
     remove_samples              = null
 
