Use region for chunking

--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -28,11 +28,24 @@ params {
     fasta  = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
     panel  = "${projectDir}/tests/csv/panel.csv"
     phased = false
-    map    = "${projectDir}/tests/csv/map.csv"
+    freq   = false
+    //map    = "${projectDir}/tests/csv/map.csv"
 
     // Pipeline steps
     steps   = "all"
 
     // Impute tools
     tools  = "glimpse1,glimpse2,stitch,quilt"
+}
+
+withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE_CHUNK' {
+    ext.args   = ["--window-size 10000", "--window-count 400", "--buffer-size 5000", "--buffer-count 30"].join(' ')
+}
+
+withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE2_CHUNK' {
+    ext.args   = ["--window-mb 0.1", "--window-count 400", "--buffer-mb 0.05", "--buffer-count 30"].join(' ')
+}
+
+withName: '.*GLIMPSE2_CHUNK' {
+    ext.args   = ["--window-mb 0.01", "--window-count 400", "--buffer-mb 0.005", "--buffer-count 30"].join(' ')
 }
