--- a/conf/steps/imputation_glimpse2.config
+++ b/conf/steps/imputation_glimpse2.config
@@ -17,7 +17,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE2:GLIMPSE2_PHASE' {
-        ext.prefix   = { "${meta.id}_${meta.region.replace(':','_')}_glimpse2" }
+        ext.prefix   = { "${meta.id}_${meta.chunk.replace(':','_')}_glimpse2" }
         ext.args     = "--keep-monomorphic-ref-sites"
         ext.suffix   = "vcf.gz"
         publishDir   = [ enabled: false ]
