--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -43,9 +43,9 @@ withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE_CHUNK' {
 }
 
 withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE2_CHUNK' {
-    ext.args   = ["--window-mb 0.01", "--window-count 400", "--buffer-mb 0.005", "--buffer-count 30"].join(' ')
+    ext.args   = ["--window-mb 0.01", "--window-cm 0.01", "--window-count 200", "--buffer-mb 0.005", "--buffer-cm 0.005", "--buffer-count 30"].join(' ')
 }
 
-withName: '.*GLIMPSE2_CHUNK' {
-    ext.args   = ["--window-mb 0.1", "--window-count 400", "--buffer-mb 0.05", "--buffer-count 30"].join(' ')
+withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:GLIMPSE2_CHUNK' {
+    ext.args   = ["--window-mb 0.01", "--window-cm 0.01", "--window-count 200", "--buffer-mb 0.005", "--buffer-cm 0.005", "--buffer-count 30"].join(' ')
 }
