--- a/conf/test_panelprep_fullchr.config
+++ b/conf/test_panelprep_fullchr.config
@@ -12,7 +12,7 @@
 
 params {
     config_profile_name        = 'Test profile'
-    config_profile_description = 'Minimal test dataset to check panel prepation steps on full chromosomes'
+    config_profile_description = 'Minimal test dataset to check panel preparation steps on full chromosomes'
 
     // Limit resources so that this can run on GitHub Actions
     max_cpus   = 24
