Separate validation step from prep panel

--- a/conf/test_validate.config
+++ b/conf/test_validate.config
@@ -25,10 +25,9 @@ params {
     input_region         = "${projectDir}/tests/csv/region.csv"
 
     // Genome references
-    fasta  = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
-    panel  = "${projectDir}/tests/csv/panel.csv"
-    phased = true
-    map    = "${projectDir}/tests/csv/map.csv"
+    fasta   = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
+    posfile = "${projectDir}/tests/csv/posfile.csv"
+    map     = "${projectDir}/tests/csv/map.csv"
 
     // Pipeline steps
     steps   = "validate"
