Move to --compute_freq

--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -25,11 +25,11 @@ params {
     depth                = 1
 
     // Genome references
-    fasta  = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
-    panel  = "${projectDir}/tests/csv/panel.csv"
-    phased = false
-    freq   = false
-    //map    = "${projectDir}/tests/csv/map.csv"
+    fasta        = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
+    panel        = "${projectDir}/tests/csv/panel.csv"
+    phased       = false
+    compute_freq = false
+    //map        = "${projectDir}/tests/csv/map.csv"
 
     // Pipeline steps
     steps   = "all"
