--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,7 @@ params {
     // Panel preparation
     panel                       = null
     phased                      = null
-    freq                        = true
+    compute_freq                = true
     rename_chr                  = false
     remove_samples              = null
 
