--- a/conf/test_panelprep.config
+++ b/conf/test_panelprep.config
@@ -28,3 +28,9 @@ params {
     // Pipeline steps
     steps   = "panelprep"
 }
+
+process {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:GLIMPSE2_CHUNK' {
+        ext.args   = ["--window-mb 0.01", "--window-cm 0.01", "--window-count 200", "--buffer-mb 0.005", "--buffer-cm 0.005", "--buffer-count 30"].join(' ')
+    }
+}
