--- a/.editorconfig
+++ b/.editorconfig
@@ -35,5 +35,6 @@ indent_style = unset
 [/docs/*.xml]
 indent_style = unset
 
-[/docs/images/metro/*.xml]
+[/docs/images/metro/*.xml*]
 indent_style = unset
+insert_final_newline = false
