Add parameter sim_by_chr and dinamically publish downsampled file USe samtools depth instead of coverage

--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -28,25 +28,24 @@ process {
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_DEPTH' {
         publishDir = [enabled: false]
-        ext.prefix = { "${meta1.id}_C${meta1.chr ?: "all"}.depth" }
-        tag = {"${meta1.id}"}
+        ext.prefix = { "${meta.id}_C${meta.chr ?: "all"}.stats" }
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_VIEW' {
-        ext.prefix = { params.input_region ?
+        ext.prefix = { params.sim_by_chr ?
             "${meta.id}_D${meta.depth}_C${meta.chr ?: "all"}" :
             "${meta.id}"
         }
         publishDir = [
             path: { "${params.outdir}/simulation/" },
             mode: params.publish_dir_mode,
-            saveAs: {  params.input_region ? null : it  }
+            saveAs: {  params.sim_by_chr ? null : it  }
         ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_INDEX_1' {
         publishDir = [
             path: { "${params.outdir}/simulation/" },
             mode: params.publish_dir_mode,
-            saveAs: {  params.input_region ? null : it  }
+            saveAs: {  params.sim_by_chr ? null : it  }
         ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_MERGE' {
@@ -56,6 +55,16 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_INDEX_2' {
         ext.args = ""
         tag = {"${meta.id}"}
+    }
+
+    // Coverage process
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_TRT' {
+        ext.prefix = { "${meta.id}_truth" }
+        publishDir = [ enabled: false ]
+    }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_SIM' {
+        ext.prefix = { "${meta.id}" }
+        publishDir = [ enabled: false ]
     }
 
     // Coverage process
