--- a/nextflow.config
+++ b/nextflow.config
@@ -42,6 +42,7 @@ params {
     // Simulate
     depth                       = 1
     genotype                    = null
+    sim_by_chr                  = true
 
     // Validation
     input_truth                 = null
