Add description and change parameter name

--- a/nextflow.config
+++ b/nextflow.config
@@ -42,7 +42,7 @@ params {
     // Simulate
     depth                       = 1
     genotype                    = null
-    sim_by_chr                  = true
+    sim_by_reg                  = true
 
     // Validation
     input_truth                 = null
