--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -218,4 +218,13 @@ process {
         ]
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BCFTOOLS_STATS:.*' {
+        prefix = { "${meta.id}_${meta.chr}_panel" }
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/stats/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
+    }
+
 }
