emit final prepared vcf

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -51,34 +51,52 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_DEL_MLT_ALL' {
         ext.args      = '-v snps -m 2 -M 2 -Oz'
         ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_snps" }
-        publishDir = [ enabled: false ]
-    }
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/normalized" },
+            enabled: true
+        ]
+        }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_2' {
         ext.args     = "--tbi"
-        publishDir = [enabled: false]
-    }
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/normalized" },
+            enabled: true
+        ]
+        }
 
     // (Optional) Subworkflow: Remove samples from panel
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_DEL_SPL' {
         ext.args      = { "-Oz -s^${params.remove_samples}" }
         ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_removed_samples" }
-        publishDir = [ enabled: false ]
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/normalized" },
+            enabled: true
+        ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_3' {
         ext.args     = "--tbi"
-        publishDir = [enabled: false]
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/normalized" },
+            enabled: true
+        ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:VCFLIB_VCFFIXUP' {
         ext.prefix   = { "${meta.id}_${meta.chr}" }
-        publishDir   = [enabled: false]
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/compute_freq" },
+            enabled: true
+        ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_4' {
         ext.args     = "--tbi"
-        publishDir   = [ enabled: false ]
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/compute_freq" },
+            enabled: true
+        ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_CONVERT' {
