emit final prepared vcf

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -101,6 +101,14 @@ process {
         ]
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_CONVERT' {
+        ext.args = {"--haplegendsample ${meta.id}_${meta.chr}"}
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/compute_freq" },
+            enabled: true
+        ]
+    }
+
     // Subworkflow: VCF_PHASE_SHAPEIT5
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:.*' {
         publishDir = [
