run test from external params

--- a/conf/test.config
+++ b/conf/test.config
@@ -29,12 +29,14 @@ params {
     phased = true
 
     // Pipeline steps
-    steps   = "panelprep,impute"
+    steps   = "impute"
+
+    // External params
+    chunks = "${projectDir}/tests/csv/chunks.csv"
+    posfile = "${projectDir}/tests/csv/posfile.csv"
 
     // Impute tools
     tools  = "glimpse1"
 }
 
-withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE_CHUNK' {
-    ext.args   = ["--window-size 10000", "--window-count 400", "--buffer-size 5000", "--buffer-count 30"].join(' ')
-}
+
