accept external chunks in glimpse2

--- a/conf/test_glimpse2.config
+++ b/conf/test_glimpse2.config
@@ -32,6 +32,7 @@ params {
 
     // External params
     chunks = "${projectDir}/tests/csv/chunks.csv"
+    posfile = "${projectDir}/tests/csv/posfile.csv"
 
     // Impute tools
     tools  = "glimpse2"
