--- a/conf/test.config
+++ b/conf/test.config
@@ -25,7 +25,7 @@ params {
 
     // Genome references
     fasta  = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
-    panel  = "${projectDir}/tests/csv/panel.csv"
+    panel  = "${projectDir}/tests/csv/panel_2.csv"
     phased = true
 
     // Pipeline steps
