Change to used input_region

--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -31,21 +31,21 @@ process {
         ext.prefix = { "${meta.id}_C${meta.chr ?: "all"}.stats" }
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_VIEW' {
-        ext.prefix = { params.sim_by_reg ?
+        ext.prefix = { params.input_region ?
             "${meta.id}_D${meta.depth}_C${meta.chr ?: "all"}" :
             "${meta.id}"
         }
         publishDir = [
             path: { "${params.outdir}/simulation/" },
             mode: params.publish_dir_mode,
-            saveAs: {  params.sim_by_reg ? null : it  }
+            saveAs: {  params.input_region ? null : it  }
         ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_INDEX_1' {
         publishDir = [
             path: { "${params.outdir}/simulation/" },
             mode: params.publish_dir_mode,
-            saveAs: {  params.sim_by_reg ? null : it  }
+            saveAs: {  params.input_region ? null : it  }
         ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_MERGE' {
