move bcftools_convert to vcf_sites_extract

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -99,15 +99,6 @@ process {
         ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_CONVERT' {
-        ext.args = {"--haplegendsample ${meta.id}_${meta.chr}"}
-        publishDir = [
-            path: { "${params.outdir}/prep_panel/haplegend/" },
-            mode: params.publish_dir_mode,
-            enabled: true
-        ]
-    }
-
     // Subworkflow: VCF_PHASE_SHAPEIT5
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:.*' {
         publishDir = [
@@ -126,8 +117,18 @@ process {
     }
 
     // Subworkflow: VCF_SITES_EXTRACT_BCFTOOLS
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:.*' {
         publishDir = [ enabled: false ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_CONVERT' {
+        ext.args = {"--haplegendsample ${meta.id}_${meta.chr}"}
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/haplegend/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_VIEW' {
