move channel haplegend from panel to posfile

--- a/conf/test_quilt.config
+++ b/conf/test_quilt.config
@@ -32,7 +32,7 @@ params {
 
     // External params
     chunks = "${projectDir}/tests/csv/chunks.csv"
-    panel  = "${projectDir}/tests/csv/panel_2.csv"
+    posfile  = "${projectDir}/tests/csv/posfile.csv"
 
     // Impute tools
     tools  = "quilt"
