Update multiqc report

--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -33,7 +33,7 @@ process {
             "-Aim",
             "-C alleles"
         ].join(' ')
-        ext.prefix = { "${meta.id}.call" }
+        ext.prefix = { "${meta.id}" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:BAM_GL_BCFTOOLS:BCFTOOLS_ANNOTATE' {
