--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -28,7 +28,7 @@ process {
             "-Aim",
             "-C alleles"
         ].join(' ')
-        ext.prefix = { "${meta.id}_truth.call" }
+        ext.prefix = { "${meta.id}_truth" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_ANNOTATE' {
@@ -42,7 +42,7 @@ process {
 
     // Concatenate the truth set
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:.*' {
-        ext.prefix = { "${meta.id}_truth_concat" }
+        ext.prefix = { "${meta.id}_truth" }
         publishDir = [
             path: { "${params.outdir}/validation/concat" },
             mode: params.publish_dir_mode,
