--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,12 +18,54 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
-    withName: 'MULTIQC' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MULTIQC' {
         ext.args   = { params.multiqc_title ? "--title \"$params.multiqc_title\"" : '' }
         publishDir = [
             path: { "${params.outdir}/multiqc" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    // Stats
+    // Simulation
+    // Coverage process
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_TRT' {
+        ext.prefix = { "${meta.id}_truth" }
+        publishDir = [ enabled: false ]
+    }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_SIM' {
+        ext.prefix = { "${meta.id}_sim" }
+        publishDir = [ enabled: false ]
+    }
+
+    // VCF
+    // PANEL
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BCFTOOLS_STATS_PANEL' {
+        ext.prefix = { "${meta.id}" }
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/stats/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
+    }
+
+    // TRUTH
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BCFTOOLS_STATS_TRUTH' {
+        ext.prefix = { "${meta.id}_truth" }
+        publishDir = [
+            path: { "${params.outdir}/validation/stats" },
+            mode: params.publish_dir_mode,
+            enabled: true,
+        ]
+    }
+    // IMPUTE
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BCFTOOLS_STATS_TOOLS' {
+        ext.prefix = { "${meta.id}_${meta.tools}" }
+        publishDir = [
+            path: { "${params.outdir}/imputation/stats" },
+            mode: params.publish_dir_mode,
+            enabled: true
         ]
     }
 }
