add tags to print id and chr when running

--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -16,6 +16,7 @@ process {
     // Impute with GLIMPSE1
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:.*' {
         publishDir = [ enabled: false ]
+        tag = {"${meta.id} ${meta.chr}"}
     }
 
     // Call the variants before imputation
