--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -17,6 +17,7 @@ process {
             path: { "${params.outdir}/imputation/quilt/" },
             mode: params.publish_dir_mode,
         ]
+        tag = {"${meta.id} ${meta.chr}"}
     }
 
     // Impute quilt
