--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -17,6 +17,7 @@ process {
             mode: params.publish_dir_mode,
             enabled: false
         ]
+        tag = {"${meta.id} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHR_CHECK:VCF_CHR_RENAME:BCFTOOLS_ANNOTATE' {
@@ -35,6 +36,7 @@ process {
     // Subworkflow: VCF_NORMALIZE_BCFTOOLS
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:.*' {
         publishDir = [ enabled: false ]
+        tag = {"${meta.id} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_NORM' {
@@ -106,6 +108,7 @@ process {
             mode: params.publish_dir_mode,
             enabled: false
         ]
+        tag = {"${meta.id} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:GLIMPSE2_CHUNK' {
@@ -120,6 +123,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:.*' {
         publishDir = [ enabled: false ]
+        tag = {"${meta.id} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_CONVERT' {
@@ -208,6 +212,7 @@ process {
             mode: params.publish_dir_mode,
             enabled: true
         ]
+        tag = {"${meta.id} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE_CHUNK' {
