--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -16,6 +16,7 @@ process {
     // Compute genotype likelihoods for the truth set
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:.*' {
         publishDir = [ enabled: false ]
+        tag = {"${meta.id} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_MPILEUP' {
@@ -65,6 +66,7 @@ process {
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
+        tag = {"${meta.id} ${meta.panel} ${meta.tools}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GLIMPSE2_CONCORDANCE' {
@@ -85,5 +87,6 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GAWK' {
         ext.args   = "'(NR == 1) || (FNR > 1)'" // Skip header line
         ext.suffix = { "txt" }
+        tag = {"Test Quality"}
     }
 }
