--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -16,16 +16,17 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:POSFILE_PREPARE_GAWK:GUNZIP' {
-        ext.prefix = { "${meta.panel}_${meta.chr}_original_posfile" }
+        ext.prefix = { "${meta.id}_${meta.chr}_original_posfile" }
         publishDir = [enabled: false]
-        tag = {"${meta.panel}_${meta.chr}"}
+        tag = {"${meta.id} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:POSFILE_PREPARE_GAWK:GAWK' {
         ext.args   = "'{ gsub(\",\", \"\\t\") ; key = \$1 FS \$2 } !seen[key]++'" // Remove duplicates
-        ext.prefix = { "${meta.panel}_${meta.chr}_posfile_stitch" }
+        ext.prefix = { "${meta.id}_${meta.chr}_posfile_stitch" }
         ext.suffix = "txt"
         publishDir = [enabled: false]
+        tag = {"${meta.id} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:STITCH' {
