--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -13,6 +13,7 @@
 process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:.*' {
         publishDir = [ enabled: false ]
+        tag = {"${meta.id} ${meta.chr}"}
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_VIEW' {
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}" }
@@ -23,10 +24,12 @@ process {
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
         ]
+        tag = {"${meta.id} ${meta.chr}"}
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_DEPTH' {
         publishDir = [enabled: false]
         ext.prefix = { "${meta.id}_C${meta.chr ?: "all"}.stats" }
+        tag = {"${meta.id}"}
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_VIEW' {
         ext.prefix = { params.input_region ?
@@ -48,9 +51,11 @@ process {
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_MERGE' {
         ext.prefix = { "${meta.id}" }
+        tag = {"${meta.id}"}
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_INDEX_2' {
         ext.args = ""
+        tag = {"${meta.id}"}
     }
 
     // Coverage process
