correct samtools depth tag

--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -29,7 +29,7 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_DEPTH' {
         publishDir = [enabled: false]
         ext.prefix = { "${meta.id}_C${meta.chr ?: "all"}.stats" }
-        tag = {"${meta.id}"}
+        tag = {"${meta1.id}"}
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_VIEW' {
         ext.prefix = { params.input_region ?
