Add patch for bcftools pluginsplit

--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -60,6 +60,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SAMPLES_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
         ext.args   = "-Oz"
+        ext.suffix = "_stitch"
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SAMPLES_BCFTOOLS:BCFTOOLS_INDEX' {
