--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -66,7 +66,7 @@ process {
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
-        tag = {"${meta.id} ${meta.panel} ${meta.tools}"}
+        tag = {"${meta.id} ${meta.panel}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GLIMPSE2_CONCORDANCE' {
