Change names for multiqc

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -31,11 +31,11 @@ process {
     // Simulation
     // Coverage process
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_TRT' {
-        ext.prefix = { "${meta.id}_truth" }
+        ext.prefix = { "${meta.id}_A-truth" }
         publishDir = [ enabled: false ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_SIM' {
-        ext.prefix = { "${meta.id}_sim" }
+        ext.prefix = { "${meta.id}_B-sim" }
         publishDir = [ enabled: false ]
     }
 
