--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -43,7 +43,6 @@ process {
 
     // Concatenate the truth set
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:.*' {
-        ext.prefix = { "${meta.id}_truth" }
         publishDir = [
             path: { "${params.outdir}/validation/concat" },
             mode: params.publish_dir_mode,
@@ -53,6 +52,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:BCFTOOLS_CONCAT' {
         ext.args = ["--ligate", "--output-type z",].join(' ')
+        ext.prefix = { "${meta.id}_A-truth" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:BCFTOOLS_INDEX' {
