Move to bcf for glimpse2

--- a/conf/steps/imputation_glimpse2.config
+++ b/conf/steps/imputation_glimpse2.config
@@ -20,12 +20,12 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE2:GLIMPSE2_PHASE' {
         ext.prefix   = { "${meta.id}_${meta.chunk.replace(':','_')}_glimpse2" }
         ext.args     = "--keep-monomorphic-ref-sites"
-        ext.suffix   = "vcf.gz"
+        ext.suffix   = "bcf"
         publishDir   = [ enabled: false ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE2:BCFTOOLS_INDEX_1' {
-        ext.args     = "--tbi"
+        ext.args     = "--csi"
         publishDir   = [ enabled: false ]
     }
 
